--- a/package.json
+++ b/package.json
@@ -10,8 +10,34 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/native": "^6.1.17",
+    "ansi-regex": "^6.0.1",
+    "expo-battery": "^8.0.1",
+    "expo-camera": "^15.0.5",
+    "expo-cli": "^6.3.10",
+    "expo-device": "^6.0.2",
+    "expo-image": "^1.12.9",
+    "expo-modules-core": "^1.12.10",
+    "fbjs": "^3.0.5",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "react-native-device-info": "^10.13.2",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-image-modal": "^1.0.16",
+    "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-incall-manager": "^4.1.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-pinch-zoom-view": "^0.2.0",
+    "react-native-pinchable": "^0.2.1",
+    "react-native-reanimated": "^3.11.0",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "^14.1.0",
+    "react-native-swiper": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -22,6 +48,7 @@
     "@react-native/metro-config": "0.74.83",
     "@react-native/typescript-config": "0.74.83",
     "@types/react": "^18.2.6",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
